# TicTacToe

./: CMakeLists.txt  INSTALL  LICENSE  cmake_uninstall.cmake.in
desktop/: TicTacToe.desktop  win32_res.rc
include/: config.h.in  main.h
include/kernel/: game.h  player.h  playersign.h
include/ui/: mainwindow.h  newgamedlg.h  playboard.h  playercreator.h  playersign.h
src/: main.cpp
src/kernel/: game.cpp  player.cpp  playersign.cpp
src/ui/: mainwindow.cpp  newgamedlg.cpp  playboard.cpp  playercreator.cpp  playersign.cpp
translations/: tictactoe_sk.qm  tictactoe_sk.ts
